--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thiệp Cưới Online - Minh & Trang</title>
+    <title>Thiệp Cưới Online - Lâm & Trang</title>
     <meta name="description" content="Thiệp cưới online - Chúng tôi trân trọng kính mời bạn đến dự lễ cưới của chúng tôi">
     
     <!-- Google Fonts -->
